project assets, editable regions

--- a/src/_projects/airbel.html
+++ b/src/_projects/airbel.html
@@ -26,12 +26,12 @@ tags:
     <div class="row">
       <div class="col-lg-4">
         <div class="content">
-          <h2>Identity</h2>
+          <h2 class="editable">Identity</h2>
         </div>
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <p class="mb-0">Airbel branding copy here Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis dapibus metus. Fusce sit
+          <p class="mb-0 editable">Airbel branding copy here Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis dapibus metus. Fusce sit
           amet lacinia tellus. Morbi dictum, ante eget dictum aliquet, ex lorem eleifend elit, sit amet ultricies lorem ante ut
           mauris. Suspendisse pharetra, sapien at tincidunt ullamcorper, tellus elit lacinia quam, Airbel branding copy here Lorem
           ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis dapibus metus. Fusce sit amet lacinia tellus. Morbi
@@ -52,7 +52,7 @@ tags:
     </div>
   </div>
 </section>
-<div class="bg-dark">
+<div class="bg-dark py-4">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -85,7 +85,11 @@ tags:
     </div>
   </div>
 </div>
-<div class="bg-image aspect-hero" style="background-image: url(/assets/img/projects/airbel/photos/airbel-1.jpg)"></div>
+<div class="bg-image aspect-hero" style="background-image: url(/assets/img/projects/airbel/photos/airbel-1.jpg)">
+<div class="image-credit">
+  <strong>Image Source</strong>
+  Airbel
+</div></div>
 <div class="bg-image aspect-hero" style="background-image: url(/assets/img/projects/airbel/branding/airbel-pattern.jpg)"></div>
 <div class="row no-gutters">
   <div class="col-lg-6">
@@ -100,10 +104,14 @@ tags:
     <div class="row">
       <div class="col-lg-4">
         <div class="content position-sticky sticky-top">
-          <h3>Airbel website</h3>
-          <p>Airbel site description is sticky Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis dapibus metus.
-          Fusce sit amet lacinia tellus. Morbi dictum, ante eget dictum aliquet, ex lorem eleifend elit, sit amet ultricies lorem
-          ante ut mauris. Suspendisse pharetra, sapien at tincidunt ullamcorper, tellus elit lacinia quam,</p>
+          <h3 class="editable">Airbel website</h3>
+          <div class="editable">
+            <p>Airbel site description is sticky Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis dapibus
+              metus.
+              Fusce sit amet lacinia tellus. Morbi dictum, ante eget dictum aliquet, ex lorem eleifend elit, sit amet ultricies
+              lorem
+              ante ut mauris. Suspendisse pharetra, sapien at tincidunt ullamcorper, tellus elit lacinia quam,</p>
+          </div>
         </div>
       </div>
       <div class="col-lg-8">
