--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -22,12 +22,12 @@ tags:
     <div class="row">
       <div class="col-lg-4">
         <div class="content">
-          <h2>Identity</h2>
+          <h2 class="editable">Identity</h2>
         </div>
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <p class="mb-0">Early in the research and brand strategy phase of this project, we decided that it would be ideal to maintain the
+          <p class="mb-0 editable">Early in the research and brand strategy phase of this project, we decided that it would be ideal to maintain the
           individual elements of the original ID if at all possible. The dropper and cube of bitters nearly phonetically spelled
           out the brand name and always kept the hand-crafted feel front and center. With Bittercube’s passion for true
           craftsmanship and commitment to producing their bitters by hand, with care, we saw an opportunity to apply the same
@@ -55,8 +55,11 @@ tags:
     <div class="row">
       <div class="col-lg-4">
         <div class="content position-sticky sticky-top">
-          <h3>Website</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi repudiandae consequuntur rem. Provident doloribus modi in a vero. Fugit itaque laborum quam labore vel ducimus facilis dicta quia perferendis veritatis.</p>
+          <h3 class="editable">Website</h3>
+          <div class="editable">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi repudiandae consequuntur rem. Provident doloribus
+              modi in a vero. Fugit itaque laborum quam labore vel ducimus facilis dicta quia perferendis veritatis.</p>
+          </div>
         </div>
       </div>
       <div class="col-lg-8">
