--- a/src/_projects/burton-learn-to-ride.html
+++ b/src/_projects/burton-learn-to-ride.html
@@ -23,12 +23,12 @@ tags:
     <div class="row">
       <div class="col-lg-4">
         <div class="content">
-          <h2>Identity</h2>
+          <h2 class="editable">Identity</h2>
         </div>
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <p class="text-large mb-0">Learn to Ride isn’t just kids and beginners— every element of the initiative (and the brand) is designed to encourage
+          <p class="mb-0 editable">Learn to Ride isn’t just kids and beginners— every element of the initiative (and the brand) is designed to encourage
           and enable improvement at all levels of riding. To this end, Ocupop also established the augmented brand of Burton Learn
           To Ride+ for more advanced programs, products, and places.</p>
         </div>
@@ -45,7 +45,8 @@ tags:
   </div>
 </div>
 <div class="bg-image aspect-16x9"
-  style="background-image: url(/assets/img/projects/burtonltr-project/burton-3.jpg)"></div>
+  style="background-image: url(/assets/img/projects/burtonltr-project/burton-3.jpg)">
+</div>
 <section id="burton-icons" class="bg-blue-med">
   <div class="container">
     <div class="row align-items-center">
@@ -68,4 +69,5 @@ tags:
   </div>
 </section>
 <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/burtonltr-project/burton-5.jpg)">
+  
 </div>
