--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -27,12 +27,12 @@ tags:
     <div class="row">
       <div class="col-lg-4">
         <div class="content">
-          <h2>Branding and event title</h2>
+          <h2 class="editable">Branding and event title</h2>
         </div>
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <p class="mb-0">GDD branding copy here Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis dapibus metus. Fusce sit
+          <p class="mb-0 editable">GDD branding copy here Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis dapibus metus. Fusce sit
           amet lacinia tellus. Morbi dictum, ante eget dictum aliquet, ex lorem eleifend elit, sit amet ultricies lorem ante ut
           mauris. Suspendisse pharetra, sapien at tincidunt ullamcorper, tellus elit lacinia quam,</p>
         </div>
@@ -80,12 +80,12 @@ tags:
     <div class="row">
       <div class="col-lg-4">
         <div class="content">
-          <h2>Animations</h2>
+          <h2 class="editable">Animations</h2>
         </div>
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <p class="mb-0">GDD Animations copy here Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis dapibus metus. Fusce sit
+          <p class="mb-0 editable">GDD Animations copy here Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis dapibus metus. Fusce sit
           amet lacinia tellus. Morbi dictum, ante eget dictum aliquet, ex lorem eleifend elit, sit amet ultricies lorem ante ut
           mauris. Suspendisse pharetra, sapien at tincidunt ullamcorper, tellus elit lacinia quam,</p>
         </div>
