--- a/src/_projects/html-5.html
+++ b/src/_projects/html-5.html
@@ -10,7 +10,7 @@ the level of design integrity maintained throughout. The W3C staff was truly inc
 reasoned, informed design process and dutifully sought to keep its membership informed about the project.</p>'
 completion_date:
 hero_image: '/assets/img/projects/html5/photos/html-parallax.jpg'
-featured_image: '/assets/img/projects/html5/photos/html5-feature.jpg'
+featured_image: '/assets/img/projects/html5/html5-work-tile.jpg'
 
 gallery:
   - image:
@@ -26,12 +26,12 @@ tags:
     <div class="row">
       <div class="col-lg-4">
         <div class="content">
-          <h2>An Identity Title here</h2>
+          <h2 class="editable">An Identity Title here</h2>
         </div>
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <p class="mb-0">ID stuff here here Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis dapibus metus. Fusce sit amet
+          <p class="mb-0 editable">ID stuff here here Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis dapibus metus. Fusce sit amet
           lacinia tellus. Morbi dictum, ante eget dictum aliquet, ex lorem eleifend elit, sit amet ultricies lorem ante ut mauris.
           Suspendisse pharetra, sapien at tincidunt ullamcorper, tellus elit lacinia quam,</p>
         </div>
@@ -82,12 +82,14 @@ tags:
     <div class="row">
       <div class="col-lg-4">
         <div class="content position-sticky sticky-top">
-          <h3>HTML 5</h3>
-          <p>site description is sticky Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis
-            dapibus metus.
-            Fusce sit amet lacinia tellus. Morbi dictum, ante eget dictum aliquet, ex lorem eleifend elit, sit amet
-            ultricies lorem
-            ante ut mauris. Suspendisse pharetra, sapien at tincidunt ullamcorper, tellus elit lacinia quam,</p>
+          <h3 class="editable">HTML 5</h3>
+          <div class="editable">
+            <p>site description is sticky Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis
+              dapibus metus.
+              Fusce sit amet lacinia tellus. Morbi dictum, ante eget dictum aliquet, ex lorem eleifend elit, sit amet
+              ultricies lorem
+              ante ut mauris. Suspendisse pharetra, sapien at tincidunt ullamcorper, tellus elit lacinia quam,</p>
+          </div>
         </div>
       </div>
       <div class="col-lg-8">
