--- a/src/_projects/kunoa.html
+++ b/src/_projects/kunoa.html
@@ -22,12 +22,12 @@ tags:
     <div class="row">
       <div class="col-lg-4">
         <div class="content">
-          <h2>Identity</h2>
+          <h2 class="editable">Identity</h2>
         </div>
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <p class="mb-0">Passionately supporting Kunoa’s dedication to a sustainable future for Hawaii, Ocupop named the brand, designed the
+          <p class="mb-0 editable">Passionately supporting Kunoa’s dedication to a sustainable future for Hawaii, Ocupop named the brand, designed the
           identity, and has served as agency of record since day one.</p>
         </div>
       </div>
@@ -60,38 +60,35 @@ tags:
     <div class="row">
       <div class="col-lg-4">
         <div class="content">
-          <h2>Packaging</h2>
+          <h2 class="editable">Packaging</h2>
         </div>
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <p class="mb-0">Kunoa in Hawaiian roughly translates as ‘Stand Free,’ celebrating their core mission of bringing healthy, local food to
+          <p class="mb-0 editable">Kunoa in Hawaiian roughly translates as ‘Stand Free,’ celebrating their core mission of bringing healthy, local food to
           the people of Hawaii and bolster an Ag industry that not only turns profits for today, but positions the Ag industry for
           a long, sustainable tomorrow. Because, after all, our food is our future!</p>
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-12">
-        <div class="content">
-          <img src="/assets/img/projects/kunoa/kunoa-09.jpg" alt="Kunoa packaging image">
-        </div>
-      </div>
-    </div>
   </div>
 </section>
+<!-- <img src="" class="img-fluid" alt="Kunoa packaging image"> -->
+<div class="bg-image aspect-hero" style="background-image: url(/assets/img/projects/kunoa/kunoa-09.jpg)"></div>
 <div class="bg-image aspect-hero" style="background-image: url(/assets/img/projects/kunoa/kunoa-06.jpg)"></div>
 <section class="website-showcase bg-black text-white">
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
         <div class="content position-sticky sticky-top">
-          <h3>website</h3>
-          <p>site description is sticky Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis
-            dapibus metus.
-            Fusce sit amet lacinia tellus. Morbi dictum, ante eget dictum aliquet, ex lorem eleifend elit, sit amet
-            ultricies lorem
-            ante ut mauris. Suspendisse pharetra, sapien at tincidunt ullamcorper, tellus elit lacinia quam,</p>
+          <h3 class="editable">website</h3>
+          <div class="editable">
+            <p>site description is sticky Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis
+              dapibus metus.
+              Fusce sit amet lacinia tellus. Morbi dictum, ante eget dictum aliquet, ex lorem eleifend elit, sit amet
+              ultricies lorem
+              ante ut mauris. Suspendisse pharetra, sapien at tincidunt ullamcorper, tellus elit lacinia quam,</p>
+          </div>
         </div>
       </div>
       <div class="col-lg-8">
