--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,13 @@ mosaic:
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <p class="quote">Ocupop is what the industry-types would call a boutique agency.</p>
+          <p class="quote editable">Ocupop is what the industry-types would call a boutique agency.</p>
         </div>
       </div>
     </div>
     <div id="home-copy" class="row">
       <div class="col-12">
-        <div class="content">
+        <div class="content editable">
           <p>
             As experts, we're hired to deliver solutions not options. We've honed an uncanny ability to be direct yet diplomatic, concise yet collaborative&mdash;tackling tough conversations and even tougher design problems together. We avoid the 'consultant-cop-out' of forcing clients to choose between multiple partially thought out options and instead work collaboratively toward one reasoned, powerful solution.
           </p>
@@ -134,77 +134,8 @@ mosaic:
         </div>
       </div>
     </div>
-    <!-- <div class="row">  
-      <div class="col-12">
-        <div class="content">
-          <div class="logo-pile">
-            <div class="logo-item">
-              <img src="/assets/img/home/logopile-google.png" alt="Google Logo" class="img-fluid" />
-            </div>
-            <div class="logo-item">
-              <img src="/assets/img/home/logopile-w3c.png" alt="W3C Logo" class="img-fluid" />
-            </div>
-            <div class="logo-item">
-              <img src="/assets/img/home/logopile-harvardbusinessreview.png" alt="Harvard Business Review Logo"
-                class="img-fluid" />
-            </div>
-            <div class="logo-item">
-              <img src="/assets/img/home/logopile-sxsw.png" alt="South by SouthWest Logo" class="img-fluid" />
-            </div>
-            <div class="logo-item">
-              <img src="/assets/img/home/logopile-facebook.png" alt="Facebook Logo" class="img-fluid" />
-            </div>
-            <div class="logo-item">
-              <img src="/assets/img/home/logopile-frontline.png" alt="Frontline Logo" class="img-fluid" />
-            </div>
-            <div class="logo-item">
-              <img src="/assets/img/home/logopile-pbs.png" alt="PBS Logo" class="img-fluid" />
-            </div>
-            <div class="logo-item">
-              <img src="/assets/img/home/logopile-burton.png" alt="Burton Logo" class="img-fluid" />
-            </div>
-            <div class="logo-item">
-              <img src="/assets/img/home/logopile-mozilla.png" alt="Mozilla Logo" class="img-fluid" />
-            </div>
-            <div class="logo-item">
-              <img src="/assets/img/home/logopile-internetsociety.png" alt="Internet Society Logo" class="img-fluid" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
   </div>
 </section>
-
-<!-- <section>
-  <div class="container">
-    <div class="row ">
-      <div class="col-md-6">
-        <div class="content editable">
-          <p class="quote">
-            Not necessarily what I wanted, but exactly what I needed.
-          </p>
-          <p class="quote-author">
-            <strong>Jesse Fink</strong><br />Founder, Refed and Priceline.com
-          </p>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="content editable">
-          <p>
-            As experts, we’re hired to deliver solutions not options. We’ve
-            honed an uncanny ability to be direct yet diplomatic, concise yet
-            collaborative— tackling tough conversations and even tougher design
-            problems together. We avoid the ‘consultant-cop-out’ of forcing
-            clients to choose between multiple partially thought out options and
-            instead work collaboratively toward one reasoned, powerful solution.
-          </p>
-          <a href="/focus" class="btn btn-outline-dark">What we do</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section> -->
 
 {% include team-photo-grid.html %}
 
@@ -213,7 +144,7 @@ mosaic:
     <div class="row ">
       <div class="col-lg-6">
         <div class="content editable">
-          <p class="quote">We are DEZIGNING! Ocupop rulez SUPREME!</p>
+          <p class="quote editable">We are DEZIGNING! Ocupop rulez SUPREME!</p>
           <p class="quote-author">
             <strong>Jon Burr</strong><br />Ocupop Web Developer, Canadian
           </p>
