--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -25,12 +25,12 @@ tags:
     <div class="row">
       <div class="col-lg-4">
         <div class="content">
-          <h2>Season Branding</h2>
+          <h2 class="editable">Season Branding</h2>
         </div>
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <p class="mb-0">For 2019 we proposed developing a cohesive theme that would neatly connect all four programs / age groups—something that
+          <p class="mb-0 editable">For 2019 we proposed developing a cohesive theme that would neatly connect all four programs / age groups—something that
           hadn’t been done in previous years.</p>
         </div>
       </div>
@@ -85,9 +85,11 @@ tags:
     <div class="row">
       <div class="col-lg-4">
         <div class="content position-sticky sticky-top">
-          <h3>Promotional Website</h3>
-          <p>Launch Microsite was designed to set the tone for the upcoming season…meant to get students, coaches, and potential
-          sponsors stoked for the awesome possibilities on the horizon.</p>
+          <h3 class="editable">Promotional Website</h3>
+          <div class="editable">
+            <p>Launch Microsite was designed to set the tone for the upcoming season…meant to get students, coaches, and potential
+              sponsors stoked for the awesome possibilities on the horizon.</p>
+          </div>
         </div>
       </div>
       <div class="col-lg-8">
@@ -99,3 +101,5 @@ tags:
     </div>
   </div>
 </section>
+<div class="bg-image aspect-hero" style="background-image: url(/assets/img/projects/first-launch-project/first-7.jpg)">
+</div>
