Updated 'src/_projects/html-5.html' via CloudCannon

--- a/src/_projects/html-5.html
+++ b/src/_projects/html-5.html
@@ -94,7 +94,7 @@ tags:
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <img src="/assets/img/projects/html5/web/HTML5-web.png" class="img-fluid" alt="HTML 5 website image">
+          <img src="/assets/img/projects/html5/ocupop-work-html5-web.jpg" class="img-fluid" alt="HTML 5 website image">
         </div>
       </div>
     </div>
