Updated 'src/_projects/html-5.html' via CloudCannon

--- a/src/_projects/html-5.html
+++ b/src/_projects/html-5.html
@@ -82,13 +82,9 @@ tags:
     <div class="row">
       <div class="col-lg-4">
         <div class="content position-sticky sticky-top">
-          <h3 class="editable">HTML 5</h3>
+          <h3 class="editable">Website</h3>
           <div class="editable">
-            <p>site description is sticky Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis
-              dapibus metus.
-              Fusce sit amet lacinia tellus. Morbi dictum, ante eget dictum aliquet, ex lorem eleifend elit, sit amet
-              ultricies lorem
-              ante ut mauris. Suspendisse pharetra, sapien at tincidunt ullamcorper, tellus elit lacinia quam,</p>
+            <p>Sometimes a logo is such a big deal that the reveal deserves an entire website. Hell, we even made sickers and <a href="https://html5shirt.com/" title="HTML5 Shirts">t-shirts</a> for this one. </p>
           </div>
         </div>
       </div>
