--- a/src/_projects/html-5.html
+++ b/src/_projects/html-5.html
@@ -26,14 +26,12 @@ tags:
     <div class="row">
       <div class="col-lg-4">
         <div class="content">
-          <h2 class="editable">An Identity Title here</h2>
+          <h2 class="editable">Identity</h2>
         </div>
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <p class="mb-0 editable">ID stuff here here Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis dapibus metus. Fusce sit amet
-          lacinia tellus. Morbi dictum, ante eget dictum aliquet, ex lorem eleifend elit, sit amet ultricies lorem ante ut mauris.
-          Suspendisse pharetra, sapien at tincidunt ullamcorper, tellus elit lacinia quam,</p>
+          <p class="mb-0 editable">It stands strong and true, resilient and universal as the markup you write. It shines as bright and as bold as the forward-thinking, dedicated web developers you are. It's the standard's standard, a pennant for progress. And it certainly doesn't use tables for layout.</p>
         </div>
       </div>
     </div>
