--- a/src/contact.html
+++ b/src/contact.html
@@ -1,7 +1,12 @@
 ---
 layout: default
 title: Contact
-testimonial: true
+testimonial:
+  quote: Ocupop was our strategic communications partner in the development of the Refed Roadmap. The visuals really
+  brought out the solutions and opportunities to reduce food waste in the U.S.
+  author: Jesse Fink
+  title:
+  company: ReFED
 ---
 <section id="page-intro">
   <div class="container">
