--- a/src/focus.html
+++ b/src/focus.html
@@ -1,7 +1,11 @@
 ---
 layout: default
 title: Focus
-testimonial: true
+testimonial:
+  quote: Ocupop's HTML5 logo played a key role in adoption. It inspired a lot of other logos to boot!
+  author: Ian Jacobs
+  title:
+  company: W3C
 ---
 
 <section id="page-intro">
