--- a/src/work.html
+++ b/src/work.html
@@ -3,9 +3,10 @@ layout: page
 title: Work
 permalink: /work/
 testimonial:
-  quote: I get complimented on our website and materials constantly. In fact, I always joke that if Ocupop hadn’t done such a great job with our design I wouldn’t be so busy all the time!
-  author: Alyssa Fox
-  title: Founder, Fox Tax Service
+  quote: Ocupop was our strategic communications partner in the development of the Refed Roadmap. The visuals really brought out the solutions and opportunities to reduce food waste in the U.S.
+  author: Jesse Fink
+  title:
+  company: ReFED
 ---
 <section id="page-intro">
   <div class="container">
