Updated 'src/_projects/html-5.html' via CloudCannon

--- a/src/_projects/html-5.html
+++ b/src/_projects/html-5.html
@@ -31,7 +31,7 @@ tags:
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <p class="mb-0 editable">It stands strong and true, resilient and universal as the markup you write. It shines as bright and as bold as the forward-thinking, dedicated web developers you are. It's the standard's standard, a pennant for progress. And it certainly doesn't use tables for layout.</p>
+          <p class="mb-0 editable">The HTLML5 logo and its progeny follow very strict geometric rules providing an incredibly adaptable yet stable and stylish identity. The logo, the icons, the colors and the type all work, and work well, in nearly every imaginable context (and probably contexts beyond our imaginations). From favicons to billboards, this mark was designed to hold together in the face any manipulation. Through simple adjustment of hue, the logo conveys incredible depth and dimension without dated or awkward flourishes. With just two shades of orange and two shades of gray, the standard logo offers a thoroughly refined and assuredly lasting visual impact. The container for the logo is shaped as a badge, implying both the formality and respect an undertaking of this magnitude demands, but also as a homage to the progressive community that proudly, and relentlessly, ushers in the future of web technologies. Simultaneously a badge of honor and a coat of arms, this crest represents the spirit and substance of the open web platform and the forward thinking community making it a reality.</p>
         </div>
       </div>
     </div>
