Updated 'src/index.html' via CloudCannon

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,7 @@ mosaic:
   - image: /assets/img/home/homepage-culture-05.jpg
 
 testimonial:
-  quote: Ocupop was our strategic communications partner in the development of the Refed Roadmap. The visuals really
-  brought out the solutions and opportunities to reduce food waste in the U.S.
+  quote: Ocupop was our strategic communications partner in the development of the Refed Roadmap. The visuals really brought out the solutions and opportunities to reduce food waste in the U.S.
   author: Jesse Fink
   title:
   company: ReFED
