Updated 'src/contact.html' via CloudCannon

--- a/src/contact.html
+++ b/src/contact.html
@@ -2,8 +2,7 @@
 layout: default
 title: Contact
 testimonial:
-  quote: Ocupop was our strategic communications partner in the development of the Refed Roadmap. The visuals really
-  brought out the solutions and opportunities to reduce food waste in the U.S.
+  quote: Ocupop was our strategic communications partner in the development of the Refed Roadmap. The visuals really brought out the solutions and opportunities to reduce food waste in the U.S.
   author: Jesse Fink
   title:
   company: ReFED
