Updated 'src/index.html' via CloudCannon

--- a/src/index.html
+++ b/src/index.html
@@ -2,26 +2,28 @@
 layout: default
 title: Home
 projects:
- - google-developer-days
- - kunoa
- - first-launch
- - burton-learn-to-ride
- - airbel
- - bittercube
-
-
+  - google-developer-days
+  - kunoa
+  - first-launch
+  - burton-learn-to-ride
+  - airbel
+  - bittercube
 mosaic:
   - image: /assets/img/home/homepage-culture-01.jpg
   - image: /assets/img/home/homepage-culture-02.jpg
   - image: /assets/img/home/homepage-culture-03.jpg
   - image: /assets/img/home/homepage-culture-04.jpg
   - image: /assets/img/home/homepage-culture-05.jpg
-
 testimonial:
-  quote: Ocupop was our strategic communications partner in the development of the Refed Roadmap. The visuals really brought out the solutions and opportunities to reduce food waste in the U.S.
-  author: Jesse Fink
+  quote: >-
+    I've never worked with a firm more easily in-sync with my style, taste, and
+    requirements. Ocupop is easily the best design firm I've worked with, and
+    the savings of time, energy, and money needed to ensure success with them
+    makes it so I'll likely never willingly choose another firm to work with.
+    Michael and team are a pure pleasure.
+  author: Matthew McNulty
   title:
-  company: ReFED
+  company: Google
 ---
 
 <section id="page-intro">
@@ -51,7 +53,7 @@ testimonial:
 <div id="project-nav">
   {% for i in (1..9) %}
     <a href="#" class="project-nav-item">
-      <img src="{{ site.placeholders.aspect-1x1}}" class="img-fluid" alt="">
+      <img src="{{ site.placeholders.aspect-1x1}}" class="img-fluid" alt="" />
       <div class="hover-overlay">
         <p class="hover-primary-text">Project name</p>
       </div>
@@ -149,7 +151,7 @@ testimonial:
     <div class="row ">
       <div class="col-lg-6">
         <div class="content editable">
-          <p class="quote editable">We are DEZIGNING! Ocupop rulez SUPREME!</p>
+          <p class="quote">We are DEZIGNING! Ocupop rulez SUPREME!</p>
           <p class="quote-author">
             <strong>Jon Burr</strong><br />Ocupop Web Developer, Canadian
           </p>
