Updated 'src/privacy.html' via CloudCannon

--- a/src/privacy.html
+++ b/src/privacy.html
@@ -6,7 +6,7 @@ title: Privacy Policy
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-12">
+      <div class="col-12 editable">
         <h1>Privacy Policies</h1>
         <h3>Cookies</h3>
         <p>
