Updated 'src/privacy.html' via CloudCannon

--- a/src/privacy.html
+++ b/src/privacy.html
@@ -8,49 +8,18 @@ title: Privacy Policy
     <div class="row">
       <div class="col-12 editable">
         <h1>Privacy Policies</h1>
-        <h3>Cookies</h3>
-        <p>
-          When you visit this site, cookies will be placed on your machine for
-          tracking visitor activity anonymously; targeting advertisements by
-          interest; and remembering user preferences.
-        </p>
-        <p>
-          I set a cookie to remember that you don't want to see the banner at
-          the top of the page that warns you about cookies on this site. If you
-          click the "I'm happy with this" button, you will not see this banner
-          on future visits* and you will opt in to having a cookie placed on
-          your machine by me.
-        </p>
-        <p>
-          This site makes use of some third party services who also store
-          cookies (Third party cookies) on your machine. These services are
-        </p>
+        <h4>Cookies</h4>
+        <p>When you visit this site, cookies will be placed on your machine for tracking visitor activity anonymously and remembering user preferences.</p>
+        <p class="present-before-paste">We set a cookie to remember that you don't want to see the pop-up at the bottom of the page that warns you about cookies on this site. If you click the "That's Cool" button, you will not see this banner on future visits* and you will opt in to having a cookie placed on your device.</p>
+        <p class="present-before-paste">This site makes use of some third party services who also store cookies (Third party cookies) on your machine. These services are</p>
         <ul>
-          <li>Google Analytics</li>
+          <li><a target="_blank" href="https://support.google.com/analytics/answer/181881?hl=en">Google Analytics</a></li>
         </ul>
-        <p>
-          You can click on each of the services to learn how to opt out of
-          accepting cookies from them.
-        </p>
-        <p>
-          If you would like more general information on controlling cookies,
-          please visit www.aboutcookies.org.
-        </p>
-        <p>
-          <em>*Note: cookies are browser-specific. If you visit using a different
-            browser or on another machine, you may see the banner again.</em>
-        </p>
-        <h3>Personal Information</h3>
-        <p>
-          I collect personal information from you when you use either the
-          contact or comments form. This information consists of the name and
-          email address you provide, and your IP address. I will publish the
-          name that you provide as part of any comment you post. I will not
-          publish your email address. If you do not agree with this, please do
-          not use the comment feature. I will only use your email address to
-          reply to you directly if I feel it is appropriate. I do not share any
-          of the information I collect from you with third parties.
-        </p>
+        <p class="present-before-paste">You can click on each of the services to learn how to opt out of accepting cookies from them.</p>
+        <p class="present-before-paste">If you would like more general information on controlling cookies, please visit www.aboutcookies.org.</p>
+        <p class="present-before-paste"><em>*Note: cookies are browser-specific. If you visit using a different browser or on another machine, you may see the banner again.</em></p>
+        <h4>Personal Information</h4>
+        <p class="present-before-paste">Ocupop only collects personal information from you when you use the contact form. This information consists of the name and email address you provide, and your IP address. We do not publish any information. We do not share any of the information collected with third parties. We only use this information to facilitate communication, specifically the ability to respond to your inquiry.</p>
       </div>
     </div>
   </div>
