Updated 'src/_projects/kunoa.html' via CloudCannon

--- a/src/_projects/kunoa.html
+++ b/src/_projects/kunoa.html
@@ -81,13 +81,9 @@ tags:
     <div class="row">
       <div class="col-lg-4">
         <div class="content position-sticky sticky-top">
-          <h3 class="editable">website</h3>
+          <h3 class="editable"></h3>Website and Online Store</h3>
           <div class="editable">
-            <p>site description is sticky Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis
-              dapibus metus.
-              Fusce sit amet lacinia tellus. Morbi dictum, ante eget dictum aliquet, ex lorem eleifend elit, sit amet
-              ultricies lorem
-              ante ut mauris. Suspendisse pharetra, sapien at tincidunt ullamcorper, tellus elit lacinia quam,</p>
+            <p>Visit the Kunoa website to read the story behind the beef, learn about becoming a member or their team, or order up some merch or a <a href="https://shop.kunoacattle.com/">case of jerky</a>.</p>
           </div>
         </div>
       </div>
