Updated 'src/_projects/bittercube.html' via CloudCannon

--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -4,17 +4,20 @@ quote: We all got LOGO TATTOOS!
 client: Bittercube Bitters
 status: active
 summary:
-description_html: '<p>Bittercube Bitters slow crafts bitters using all natural ingredients, and no extracts of any kind. Hailing from
-Milwaukee and Minneapolis, Bittercube has been in the craft cocktail industry since 2009. Bittercube needed to elevate
-their brand to match the quality and sophistication of their products, philosophy, and team. And once they saw the new
-logo, every one of ‘em had a new tattoo!</p>'
+description_html: >-
+  <p>Bittercube Bitters slow crafts bitters using all natural ingredients, and
+  no extracts of any kind. Hailing from Milwaukee and Minneapolis, Bittercube
+  has been in the craft cocktail industry since 2009. Bittercube needed to
+  elevate their brand to match the quality and sophistication of their products,
+  philosophy, and team. And once they saw the new logo, every one of &lsquo;em
+  had a new tattoo!</p>
 completion_date:
 hero_image: /assets/img/projects/bittercube-project/bittercube-parallax.jpg
 featured_image: /assets/img/projects/bittercube-project/bittercube-feature.jpg
 tags:
-- branding
-- web
-- illustration
+  - branding
+  - web
+  - illustration
 ---
 
 <section>
@@ -44,7 +47,7 @@ tags:
     <div class="row">
       <div class="col-12 col-lg-8 mx-lg-auto">
         <div class="content">
-          <img src="/assets/img/projects/bittercube-project/bittercube-3.svg" class="img-fluid my-5" alt="Airbel logo">
+          <img src="/assets/img/projects/bittercube-project/bittercube-3.svg" class="img-fluid my-5" alt="Airbel logo" />
         </div>
       </div>
     </div>
@@ -57,18 +60,16 @@ tags:
         <div class="content position-sticky sticky-top">
           <h3 class="editable">Website</h3>
           <div class="editable">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi repudiandae consequuntur rem. Provident doloribus
-              modi in a vero. Fugit itaque laborum quam labore vel ducimus facilis dicta quia perferendis veritatis.</p>
+            <p>The Bittercube website was a clear reflection of their new brand and identity. We were able to showcase clear messaging and visuals to match the brand. The recipe functionality brought to life a large repertoire of excellent recipes and provided the client a toolset to manage an ever-growing data set. If you are thirsty... <a target="_blank" href="https://bittercube.com/recipes">Check it out!</a></p>
           </div>
         </div>
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <img src="/assets/img/projects/bittercube-project/bittercube-web-home.jpg" class="img-fluid" alt="Bittercube website image">
+          <img src="/assets/img/projects/bittercube-project/bittercube-web-home.jpg" class="img-fluid" alt="Bittercube website image" />
         </div>
       </div>
     </div>
   </div>
 </section>
-<div class="bg-image aspect-hero"
-  style="background-image: url(/assets/img/projects/bittercube-project/bittercube-4.jpg)"></div>
+<div class="bg-image aspect-hero" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-4.jpg)"></div>
