Updated 'src/_projects/kunoa.html' via CloudCannon

--- a/src/_projects/kunoa.html
+++ b/src/_projects/kunoa.html
@@ -81,7 +81,7 @@ tags:
     <div class="row">
       <div class="col-lg-4">
         <div class="content position-sticky sticky-top">
-          <h3 class="editable"></h3>Website and Online Store</h3>
+          <h3 class="editable">Website and Online Store</h3>
           <div class="editable">
             <p>Visit the Kunoa website to read the story behind the beef, learn about becoming a member or their team, or order up some merch or a <a href="https://shop.kunoacattle.com/">case of jerky</a>.</p>
           </div>
