Updated 'src/_projects/airbel.html' via CloudCannon

--- a/src/_projects/airbel.html
+++ b/src/_projects/airbel.html
@@ -31,11 +31,9 @@ tags:
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <p class="mb-0 editable">Airbel branding copy here Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis dapibus metus. Fusce sit
-          amet lacinia tellus. Morbi dictum, ante eget dictum aliquet, ex lorem eleifend elit, sit amet ultricies lorem ante ut
-          mauris. Suspendisse pharetra, sapien at tincidunt ullamcorper, tellus elit lacinia quam, Airbel branding copy here Lorem
-          ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis dapibus metus. Fusce sit amet lacinia tellus. Morbi
-          dictum, ante eget dictum aliquet, ex lorem eleifend elit,</p>
+          <p class="mb-0 editable">
+            Airbel&nbsp;
+          </p>
         </div>
       </div>
     </div>
@@ -46,7 +44,7 @@ tags:
     <div class="row">
       <div class="col-12 col-lg-8 mx-lg-auto">
         <div class="content">
-          <img src="/assets/img/projects/airbel/branding/airbel-ID.svg" class="img-fluid my-5" alt="Airbel logo">
+          <img src="/assets/img/projects/airbel/branding/airbel-ID.svg" class="img-fluid my-5" alt="Airbel logo" />
         </div>
       </div>
     </div>
@@ -59,25 +57,25 @@ tags:
         <div class="content">
           <div class="d-flex project-icons align-items-center">
             <div>
-              <img src="/assets/img/projects/airbel/branding/airbel-icons/airbel-icon-1.svg" class="img-fluid" alt="Airbel icon">
+              <img src="/assets/img/projects/airbel/branding/airbel-icons/airbel-icon-1.svg" class="img-fluid" alt="Airbel icon" />
             </div>
             <div>
-              <img src="/assets/img/projects/airbel/branding/airbel-icons/airbel-icon-2.svg" alt="Airbel icon">
+              <img src="/assets/img/projects/airbel/branding/airbel-icons/airbel-icon-2.svg" alt="Airbel icon" />
             </div>
             <div>
-              <img src="/assets/img/projects/airbel/branding/airbel-icons/airbel-icon-3.svg" alt="Airbel icon">
+              <img src="/assets/img/projects/airbel/branding/airbel-icons/airbel-icon-3.svg" alt="Airbel icon" />
             </div>
             <div>
-              <img src="/assets/img/projects/airbel/branding/airbel-icons/airbel-icon-4.svg" alt="Airbel icon">
+              <img src="/assets/img/projects/airbel/branding/airbel-icons/airbel-icon-4.svg" alt="Airbel icon" />
             </div>
             <div>
-              <img src="/assets/img/projects/airbel/branding/airbel-icons/airbel-icon-5.svg" alt="Airbel icon">
+              <img src="/assets/img/projects/airbel/branding/airbel-icons/airbel-icon-5.svg" alt="Airbel icon" />
             </div>
             <div>
-              <img src="/assets/img/projects/airbel/branding/airbel-icons/airbel-icon-6.svg" alt="Airbel icon">
+              <img src="/assets/img/projects/airbel/branding/airbel-icons/airbel-icon-6.svg" alt="Airbel icon" />
             </div>
             <div>
-              <img src="/assets/img/projects/airbel/branding/airbel-icons/airbel-icon-7.svg" alt="Airbel icon">
+              <img src="/assets/img/projects/airbel/branding/airbel-icons/airbel-icon-7.svg" alt="Airbel icon" />
             </div>
           </div>
         </div>
@@ -106,18 +104,13 @@ tags:
         <div class="content position-sticky sticky-top">
           <h3 class="editable">Airbel website</h3>
           <div class="editable">
-            <p>Airbel site description is sticky Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis dapibus
-              metus.
-              Fusce sit amet lacinia tellus. Morbi dictum, ante eget dictum aliquet, ex lorem eleifend elit, sit amet ultricies
-              lorem
-              ante ut mauris. Suspendisse pharetra, sapien at tincidunt ullamcorper, tellus elit lacinia quam,</p>
+            <p>The Airbel website clearly stepped away from the norm with unique layouts and tools to the end-user. Many of the elements from the new brand were showcased to add visual appeal and complement the content. We worked closely with the client to create a &nbsp;custom content management tool to match their unique needs. This is the first step in an evolving web app that we are truly honoured to be a part of. Please visit their <a target="_blank" href="https://airbel.rescue.org/">website</a> to see the amazing things that the Airbel team is doing.&nbsp;</p>
           </div>
         </div>
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <img src="/assets/img/projects/airbel/web/airbel-web.jpg" class="img-fluid"
-            alt="Airbel website image">
+          <img src="/assets/img/projects/airbel/web/airbel-web.jpg" class="img-fluid" alt="Airbel website image" />
         </div>
       </div>
     </div>
